--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.samuelectionapp">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/vote_app_icon"
         android:label="@string/app_name"
@@ -11,6 +12,7 @@
         android:theme="@style/Theme.SAMUElectionApp">
         <activity
             android:name=".MainActivity"
+            android:windowSoftInputMode="adjustPan|adjustResize"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
