--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,23 @@ buildscript {
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
 
+
+        //firebase
+        classpath 'com.google.gms:google-services:4.3.10'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
+//allprojects {
+//    repositories {
+//        google()
+//        jcenter()
+//        mavenCentral()
+//        mavenLocal()
+//    }
+//}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
