--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+   // implementation 'com.firebaseui:firebase-ui-database:6.2.0'
+    implementation "com.firebaseui:firebase-ui-firestore:6.2.1"
+
 
 
 
